--- a/bkallenway/sourcecode/src/main/resources/application.yml
+++ b/bkallenway/sourcecode/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
             naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy
         properties:
             hibernate.globally_quoted_identifiers: true
-            hibernate.show_sql: true
+            hibernate.show_sql: false
             hibernate.format_sql: true
 
 
