--- a/bkallenway/sourcecode/pom.xml
+++ b/bkallenway/sourcecode/pom.xml
@@ -111,6 +111,12 @@
             <version>4.2.4.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.3</version>
+        </dependency>
+
 
     </dependencies>
 
