--- a/bkallenway/sourcecode/infrustructure/pom.xml
+++ b/bkallenway/sourcecode/infrustructure/pom.xml
@@ -21,5 +21,17 @@
             <groupId>com.allenway</groupId>
             <artifactId>commons</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
     </dependencies>
 </project>
