--- a/bkallenway/sourcecode/pom.xml
+++ b/bkallenway/sourcecode/pom.xml
@@ -14,7 +14,6 @@
         <module>commons</module>
         <module>infrustructure</module>
         <module>visitor</module>
-        <module>admin</module>
         <module>boot</module>
     </modules>
 
@@ -29,38 +28,31 @@
             <dependency>
                 <groupId>com.allenway</groupId>
                 <artifactId>utils</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.allenway</groupId>
-                <artifactId>admin</artifactId>
-                <version>${project.version}</version>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.allenway</groupId>
                 <artifactId>boot</artifactId>
-                <version>${project.version}</version>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.allenway</groupId>
                 <artifactId>commons</artifactId>
-                <version>${project.version}</version>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.allenway</groupId>
                 <artifactId>infrustructure</artifactId>
-                <version>${project.version}</version>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
 
             <dependency>
                 <groupId>com.allenway</groupId>
                 <artifactId>visitor</artifactId>
-                <version>${project.version}</version>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-
 
     <dependencies>
         <dependency>
