--- a/bkallenway/sourcecode/infrustructure/pom.xml
+++ b/bkallenway/sourcecode/infrustructure/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.3.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.3</version>
+        </dependency>
     </dependencies>
 </project>
