UPDATE java,node's dockerfile

--- a/bkallenway/dockerfile
+++ b/bkallenway/dockerfile
@@ -8,7 +8,6 @@ RUN cd /opt/ && git clone https://github.com/pzxwhc/Allen6314.git
 RUN yum -y install java && yum -y install java-1.8.0-openjdk-devel.x86_64 &&  yum -y install maven
 RUN cd /opt/Allen6314/bkallenway/sourcecode && mvn clean install
 
-EXPOSE 8080
-
 # run
-CMD cd /opt/Allen6314/bkallenway/sourcecode/boot/target && java -jar boot-1.0-SNAPSHOT.jar
+CMD touch /opt/flag.log && tail -f /opt/flag.log
+#CMD cd /opt/Allen6314/bkallenway/sourcecode/boot/target && java -jar boot-1.0-SNAPSHOT.jar 
